Fix overflow on mobile devices.

--- a/styles/multipong.css
+++ b/styles/multipong.css
@@ -55,6 +55,15 @@ body.right #right-paddle {
     right: 2em;
 }
 
+#balls {
+    position: absolute;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
 body.playing .ball {
     border-radius: 10em;
     position: absolute;
